# git-moves-together

./: .dockerignore  .editorconfig  .git-mit.toml.dist  .mergify.yml  .versio.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  Dockerfile.bins  Dockerfile.container  Justfile  Makefile  README.md  cliff.toml  cog.toml  docker-bake.hcl  nfpm.yaml  renovate.json
.cargo/: config.toml
.forgejo/workflows/: ci.yml  pipeline.yml  release.yml
.github/: dependabot.yml
.github/workflows/: test-and-tag.yml
homebrew/: formula.rb.envsubstr  formula.rb.j2
src/: cli.rs  errors.rs  filters.rs  main.rs  statistics.rs
src/model/: change_delta.rs  changed_file.rs  changed_file_path.rs  commit.rs  commits.rs  delta.rs  hash.rs  mod.rs  snapshot.rs  snapshot_id.rs  snapshots.rs
src/repository/: contract_test.rs  errors.rs  in_memory.rs  interface.rs  libgit2.rs  mod.rs
test-harness/: specdown
