[package]
name = "git-moves-together"
version = "2.6.2"
edition = "2018"
categories = ["development-tools", "command-line-utilities"]
keywords = ["git", "coupling"]
repository = "https://github.com/PurpleBooth/git-moves-together"
description = "Find files that move at the same time in a git repository to identify coupling"
license = "CC0-1.0"
authors = ["Billie Thompson <billie@billiecodes.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.19.0"
thiserror = "1.0.63"
clap = { version = "4.5.16", features = ["derive", "cargo", "wrap_help", "env", "unicode"] }
comfy-table = "7.1.1"
tokio = { version = "1.40.0", features = ["full"] }
futures = "0.3.30"
miette = { version = "7.2.0", features = ["fancy"] }
time = "0.3.36"

[dev-dependencies]
tempfile = "3.12.0"
rand = "0.8.5"
