[package]
name = "git-moves-together"
version = "2.7.0"
edition = "2024"
categories = ["development-tools", "command-line-utilities"]
keywords = ["git", "coupling"]
repository = "https://github.com/PurpleBooth/git-moves-together"
description = "Find files that move at the same time in a git repository to identify coupling"
license = "CC0-1.0"
authors = ["Billie Thompson <billie@billiecodes.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.19.0"
thiserror = "1.0.69"
clap = { version = "4.5.38", features = [
    "derive",
    "cargo",
    "wrap_help",
    "env",
    "unicode",
] }
comfy-table = "7.1.4"
tokio = { version = "1.45.0", features = ["full"] }
futures = "0.3.31"
miette = { version = "7.6.0", features = ["fancy"] }
time = "0.3.41"

[dev-dependencies]
tempfile = "3.19.1"
rand = "0.8.5"
