[package]
name = "git-moves-together"
version = "2.8.0"
edition = "2024"
categories = ["development-tools", "command-line-utilities"]
keywords = ["git", "coupling"]
repository = "https://codeberg.org/PurpleBooth/git-moves-together"
description = "Find files that move at the same time in a git repository to identify coupling"
license = "CC0-1.0"
authors = ["Billie Thompson <billie@billiecodes.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.20.2"
thiserror = "2.0.12"
clap = { version = "4.5.40", features = [
    "derive",
    "cargo",
    "wrap_help",
    "env",
    "unicode",
] }
comfy-table = "7.1.4"
tokio = { version = "1.45.1", features = ["full"] }
futures = "0.3.31"
miette = { version = "7.6.0", features = ["fancy"] }
time = "0.3.41"

[dev-dependencies]
tempfile = "3.20.0"
rand = "0.9.1"

[build-dependencies]
cargo-chef = "0.1.71"
